# open-fiction-corpus

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  GOVERNANCE.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: dispute-classification.yml  nominate-book.yml  report-text-problem.yml
.github/PULL_REQUEST_TEMPLATE/: book-suggestion.md
.github/workflows/: prepare.yml  release.yml  validate.yml
catalog/examples/: example-work.yaml
catalog/works/: arthur-conan-doyle-the-hound-of-the-baskervilles-en.yaml  bram-stoker-dracula-en.yaml  charlotte-bronte-jane-eyre-en.yaml  h-g-wells-the-time-machine-en.yaml  jane-austen-pride-and-prejudice-en.yaml  (+4 more)
docs/: book-backlog.md  cleaning-guide.md  dataset-card-template.md  dataset-format.md  hugging-face.md  review-checklist.md  rights-policy.md  training-guide.md
overrides/: arthur-conan-doyle-the-hound-of-the-baskervilles-en.yaml  bram-stoker-dracula-en.yaml  charlotte-bronte-jane-eyre-en.yaml  h-g-wells-the-time-machine-en.yaml  jane-austen-pride-and-prejudice-en.yaml  l-frank-baum-the-wonderful-wizard-of-oz-en.yaml  mary-shelley-frankenstein-en.yaml  robert-louis-stevenson-treasure-island-en.yaml  wilkie-collins-the-moonstone-en.yaml
packs/: general-fiction.yaml
schema/: genres.yaml  modernization-rules.yaml  overrides.schema.json  pack.schema.json  quality-flags.yaml  rights-statuses.yaml  work.schema.json
scripts/: assemble_release.py
tests/: helpers.py  test_build.py  test_hardening.py  test_prepare.py  test_validate.py
(+9 files in other folders)
